-
Bug
-
Resolution: Done
-
P2: Important
-
6.2
-
None
-
0b8dcf81a4ca6a53370839a99db763a563963fe3 (qt/qtquick3d/dev) 44229e8436cf4e7709ca27e8996bb4d252590faf (qt/qtquick3d/6.2)
-
Qt Quick 3D - 2021 Week 23/24
Model-blend particles rendered incorrectly when endNode has rotation.
| For Gerrit Dashboard: QTBUG-94337 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 354065,3 | Fix endNode rotation | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
| 354293,2 | Fix endNode rotation | 6.2 | qt/qtquick3d | Status: MERGED | +2 | 0 |