Fix endNode rotation

The end node rotation needs to be done in model space so that the model
is rendered correctly and we don't need to do conversions to euler angles after transformations.

Fixes: QTBUG-94337
Change-Id: I8b0f704b2613beb73ba6b033497e2467cf65cb51
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit 0b8dcf81a4ca6a53370839a99db763a563963fe3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>